# rust-mime-sniffer

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: api.rs  lib.rs  magic.rs
